# issw

./: AGENTS.md  Cargo.toml  LICENSE  PLAN.md  README.md
.github/workflows/: ci.yml
src/: main.rs
